vlib/v/parser/tests/module_global.vv
import os
os.foo := 0
